--- a/view/css/style-index.css
+++ b/view/css/style-index.css
@@ -1,5 +1,22 @@
 :root {
-	
+
+
+	--color-letra-uno : brack; 
+	--color-letra-boton : back; 
+	--color-letra-boton-invertido : back;
+	--color-letra-input : back;
+	--color-letra-desactivado : back;
+	--color-letra-activado : #FF6392;
+
+	--color-borde-boton: white; 
+
+	--color-fondo : #F9F9F9;
+	--color-fondo-botones: #FF6392;
+	--color-fondo-form-login : #7FC8F8 ;
+	--color-fondo-form-login-animacion : #F9F9F9 ;
+	--color-fondo-form-login-oculto : #FFE45E ;
+	--color-fondo-input : #FFE45E;
+	--color-fondo-input-borde : black;
 }
 *, *::before, *::after {
 	box-sizing: border-box;
@@ -8,7 +25,7 @@
 body {
 	margin: 0;
 	font-family: Roboto, -apple-system, 'Helvetica Neue', 'Segoe UI', Verdana, sans-serif;
-	background: #3b4465;
+	background : var(--color-fondo);
 }
 
 .forms-section {
@@ -21,7 +38,7 @@ body {
 .section-title {
 	font-size: 32px;
 	letter-spacing: 1px;
-	color: #fff;
+	color: var(--color-letra-uno);
 }
 
 .forms {
@@ -67,7 +84,7 @@ body {
 	font-family: inherit;
 	font-size: 16px;
 	letter-spacing: .5px;
-	color: #999;
+	color: var(--color-letra-desactivado);
 	background-color: transparent;
 	border: none;
 	outline: none;
@@ -76,12 +93,12 @@ body {
 }
 
 .form-wrapper.is-active .switcher-login {
-	color: #fff;
+	color: var(--color-letra-activado);
 	transform: translateX(90px);
 }
 
 .form-wrapper.is-active .switcher-signup {
-	color: #fff;
+	color: var(--color-letra-activado);
 	transform: translateX(-90px);
 }
 
@@ -145,21 +162,21 @@ body {
 		transform: translate(0, 0);
 	}
 	100% {
-		background-color: #fff;
+		background-color: var(--color-fondo-form-login);
 		transform: translate(35%, -20px);
 	}
 }
 
 @keyframes hideLogin {
 	0% {
-		background-color: #fff;
+		background-color: var(--color-fondo-form-login-animacion);
 		transform: translate(35%, -20px);
 	}
 	50% {
 		transform: translate(0, 0);
 	}
 	100% {
-		background: #d7e7f1;
+		background:var(--color-fondo-form-login-oculto);
 		transform: translate(40%, 10px);
 	}
 }
@@ -173,6 +190,7 @@ body {
 }
 
 @keyframes showSignup {
+	
 	0% {
 		background: #d7e7f1;
 		transform: translate(-40%, 10px) scaleY(.8);
@@ -181,21 +199,21 @@ body {
 		transform: translate(0, 0) scaleY(.8);
 	}
 	100% {
-		background-color: #fff;
+		background-color: var(--color-fondo-form-login);
 		transform: translate(-35%, -20px) scaleY(1);
 	}
 }
 
 @keyframes hideSignup {
 	0% {
-		background-color: #fff;
+		background-color: var(--color-fondo-form-login-animacion);
 		transform: translate(-35%, -20px) scaleY(1);
 	}
 	50% {
 		transform: translate(0, 0) scaleY(.8);
 	}
 	100% {
-		background: #d7e7f1;
+		background:var(--color-fondo-form-login-oculto);
 		transform: translate(-40%, 10px) scaleY(.8);
 	}
 }
@@ -237,7 +255,7 @@ body {
 
 .input-block label {
 	font-size: 14px;
-  color: #a1b4b4;
+  color: var();
 }
 
 .input-block input {
@@ -248,10 +266,10 @@ body {
 	padding-left: 15px;
 	font-size: 16px;
 	line-height: 40px;
-	color: #3b4465;
-  background: #eef9fe;
-  border: 1px solid #cddbef;
-  border-radius: 2px;
+	color: var(--color-letra-input);
+  	background: var(--color-fondo-input);
+  	border: 1px solid var(--color-fondo-input-borde);
+  	border-radius: 2px;
 }
 
 .form [type='submit'] {
@@ -273,14 +291,14 @@ body {
 }
 
 .btn-login {
-	color: #fbfdff;
-	background: #a7e245;
+	color: var(--color-letra-boton-invertido);
+	background: var(--color-fondo-botones);
 	transform: translateX(-30%);
 }
 
 .btn-signup {
-	color: #a7e245;
-	background: #fbfdff;
-	box-shadow: inset 0 0 0 2px #a7e245;
+	color: var(--color-letra-boton);
+	background: var(--color-borde-boton);
+	box-shadow: inset 0 0 0 2px var(--color-fondo-botones) ;
 	transform: translateX(30%);
 }
