--- a/view/index.html
+++ b/view/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>   
 <html lang="es">   
 <head>  
-<title> iniciar sesion </title>  
-<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">  
-<link rel="stylesheet" href="css/style-index.css">
-<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="./style.css">
+  <title> iniciar sesion </title>  
+  <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">  
+  <link rel="stylesheet" href="css/style-index.css">
+  <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="./style.css">
 </head>         
 <body>
-<section class="forms-section">
+  <section class="forms-section">
   <h1 class="section-title">Nombre de la empresa</h1>
   <div class="forms">
     <div class="form-wrapper is-active">
       <button type="button" class="switcher switcher-login">
-        Login
+        Iniciar sesion
         <span class="underline"></span>
       </button>
       <form class="form form-login">
@@ -33,7 +33,7 @@
     </div>
     <div class="form-wrapper">
       <button type="button" class="switcher switcher-signup">
-        Sign Up
+        Registrar
         <span class="underline"></span>
       </button>
       <form class="form form-signup">
@@ -56,6 +56,6 @@
       </form>
     </div>
   </div>
-</section>
+  </section>
   <script  src="./script/script-index.js"></script>
 </body>
