--- a/view/html/ingreso-cliente.html
+++ b/view/html/ingreso-cliente.html
@@ -14,7 +14,7 @@
         Ingresar cliente
         <span class="underline"></span>
       </button>
-      <form class="form form-login">
+      <div class="form form-login">
         <fieldset>
           <legend>Por favor ingrese el usuario</legend>
           <div class="input-block">
@@ -35,7 +35,7 @@
           </div>
         </fieldset>
         <button type="submit" class="btn-login" onclick="ingresarCliente()">Iniciar</button>
-      </form>
+      </div>
     </div>
   </div>
   </section>
