--- a/view/index.html
+++ b/view/index.html
@@ -15,7 +15,7 @@
         Iniciar sesion
         <span class="underline"></span>
       </button>
-      <form class="form form-login">
+      <div class="form form-login">
         <fieldset>
           <legend>Por favor ingrese el usuario</legend>
           <div class="input-block">
@@ -28,7 +28,7 @@
           </div>
         </fieldset>
         <button type="submit" class="btn-login" onclick="login()">Iniciar</button>
-      </form>
+      </div>
     </div>
     <!-- Este es para formulario se puede duplicar-->
     <div class="form-wrapper">
@@ -36,7 +36,7 @@
         Registrar
         <span class="underline"></span>
       </button>
-      <form class="form form-signup">
+      <div class="form form-signup">
         <fieldset>
           <legend>Por favor ingrese su contraseña</legend>
           <div class="input-block">
@@ -57,7 +57,7 @@
           </div>
         </fieldset>
         <button type="submit" class="btn-signup"  onclick="registrar()">Registrar</button>
-      </form>
+      </div>
     </div>
   </div>
   </section>
